--- a/html/css/common_02.css
+++ b/html/css/common_02.css
@@ -278,8 +278,14 @@
     background: url('../img/pc/ico/ico_list.png') no-repeat;
     background-size: contain;
 }
-.btn_cancel.bg-gray span{background: #F9F9FB url(../img/pc/ico/ico_btn_cancel.png) no-repeat 0 center;background-size:24px auto;}
-.btn_cancel_approval span{background:url(../img/mo/ico/icon_cancel_confirm.png) no-repeat 0 center;background-size:24px auto;padding-left: 30px;}
+.btn_cancel.bg-gray {background: #F9F9FB}
+.btn_cancel.bg-gray span{background:  url(../img/pc/ico/ico_btn_cancel.png) no-repeat 0 center;background-size:24px auto;}
+.btn_cancel_approval span{background:url(../img/mo/ico/icon_cancel_confirm.png) no-repeat 0 center;background-size:18px auto;padding-left: 25px;}
+.btn.btn_list span {
+    background: url(../img/pc/ico/ico_list.png) no-repeat 0 center;
+    background-size: 15px auto;
+}
+
 /* //테이블 */
 
 .table_cont .table-body-only {
@@ -447,7 +453,7 @@
     text-align: left;
 }
 .table_cont table tbody tr.highlight td {
-    background-color: #fff3ed;
+    background-color: #FFF4ED;
 }
 .table_cont table tbody tr.highlight td a {
     color:#FF8B4A;
@@ -487,6 +493,10 @@
 .law-wrap .law-content {
     flex:1;
 }
+.law-wrap .law-content table.table-list tbody td {
+    padding: 12px 5px;
+}
+
 .tree-menu-wrap {
     flex: 1;
     border: 1px solid #D8DDE9;
@@ -684,7 +694,7 @@
     table tbody td {
         font-size: 14px;
         line-height: 14px;
-        padding: 9px 5px;
+        padding: 9px 8px;
     }
 
     .table_cont.rount-type-sm {
