--- a/html/css/common_02.css
+++ b/html/css/common_02.css
@@ -6,6 +6,7 @@
     align-items: center;
     gap: 16px;
 }
+.radio-box label+label{margin-left:10px;}
 .radio-box label {
     display: flex;
     align-items: center;
@@ -304,9 +305,8 @@
     line-height: 18px;
     letter-spacing: -0.02em;
     vertical-align: middle;
-    text-align: left;
     color:#222222;
-    padding-left: 12px;
+    padding:0 12px;
     border-bottom: 1px solid #D8DDE9;
 }
 .table_cont .table-body-only tbody td {
@@ -323,6 +323,7 @@
     padding-left: 12px;
     cursor: default;
 }
+.table_cont .table-body-only tbody td input .noti_txt{}
 .table_cont .table-body-only tbody td input {
     padding-left: 0;
     padding-right: 0;
